# jcuda-maven

./: .gitignore  CMakeLists.txt  Makefile  make-poms.sh  pom-template.xml  pom.xml
CMake/: FindCUDA.cmake
CommonJNI/: CommonJNI.vcproj  Makefile
CommonJNI/src/: JNIUtils.cpp
JCublas2JNI/: CMakeLists.txt  JCublas2.vcproj  Makefile
JCublas2JNI/src/: JCublas2.cpp  JCublas2.hpp  JCublas2_common.hpp
JCublas2Java/: pom.xml
JCublas2Java/src/jcuda/jcublas/: JCublas2.java
JCublasJNI/: CMakeLists.txt  JCublas.vcproj  Makefile
JCublasJNI/src/: JCublas.cpp  JCublas.hpp  JCublas_common.hpp
JCublasJava/: pom.xml
JCublasJava/resources/: jcublas-osx-x86_64.jnilib  jcublas2-osx-x86_64.jnilib
JCublasJava/src/jcuda/jcublas/: JCublas.java  cublasStatus.java
JCudaDriverJNI/: CMakeLists.txt  JCudaDriver.vcproj  Makefile
JCudaDriverJNI/src/: JCudaDriver.cpp  JCudaDriver.hpp  JCudaDriver_common.hpp
JCudaJava/: pom.xml
JCudaJava/resources/: jcuda-osx-x86_64.jnilib  jcudriver-osx-x86_64.jnilib
JCudaJava/src/jcuda/driver/: CUdevice_attribute.java  CUfunction_attribute.java  CUjit_target.java  CUpointer_attribute.java  CUresult.java  CUstream.java  JCudaDriver.java
JCudaJava/src/jcuda/runtime/: JCuda.java  cudaDeviceAttr.java  cudaDeviceProp.java  cudaError.java  cudaExtent.java  cudaFuncAttributes.java  cudaPointerAttributes.java  cudaStream_t.java
JCudaRuntimeJNI/: CMakeLists.txt  JCudaRuntime.vcproj  Makefile
JCudaRuntimeJNI/src/: JCudaRuntime.cpp  JCudaRuntime.hpp  JCudaRuntime_common.hpp
JCufftJNI/: CMakeLists.txt  JCufft.vcproj  Makefile
JCufftJNI/src/: JCufft.cpp  JCufft.hpp  JCufft_common.hpp
JCufftJava/: pom.xml
JCufftJava/resources/: jcufft-osx-x86_64.jnilib
JCufftJava/src/jcuda/jcufft/: JCufft.java  cufftCompatibility.java  cufftResult.java
JCurandJNI/: CMakeLists.txt  JCurand.vcproj  Makefile
JCurandJNI/src/: JCurand.cpp  JCurand_common.hpp
JCurandJava/: pom.xml
JCurandJava/resources/: jcurand-osx-x86_64.jnilib
JCurandJava/src/jcuda/jcurand/: JCurand.java  curandRngType.java
JCusparse2JNI/: CMakeLists.txt  JCusparse2.vcproj  Makefile
JCusparse2JNI/src/: JCusparse2.cpp  JCusparse2.hpp  JCusparse2_common.hpp
JCusparse2Java/: pom.xml
JCusparse2Java/resources/: jcusparse2-osx-x86_64.jnilib
JCusparse2Java/src/jcuda/jcusparse/: JCusparse2.java
JCusparseJNI/: CMakeLists.txt  JCusparse.vcproj  Makefile
JCusparseJNI/src/: JCusparse.cpp  JCusparse.hpp  JCusparse_common.hpp
JCusparseJava/: pom.xml
JCusparseJava/resources/: jcusparse-osx-x86_64.jnilib
JCusparseJava/src/jcuda/jcusparse/: JCusparse.java  cusparseDiagType.java  cusparseDirection.java  cusparseFillMode.java  cusparseIndexBase.java  cusparseMatrixType.java  cusparseStatus.java
